# extint_apint

./: CMakeLists.txt  README.md
include/: apintext.hpp  value.hpp
include/apintext/: aliases.hpp  arith_prop.hpp  expression.hpp  policies.hpp  static_math.hpp  value.hpp
tests/: CMakeLists.txt
tests/arithmetic/: CMakeLists.txt  arithmetic.cpp  conversion.cpp  logic.cpp
tests/basic/: CMakeLists.txt  arithmetic.cpp  simple_compile.cpp
